# amigahid-pico

./: .gitignore  CMakeLists.txt
bluepad32/include/controller/: uni_mouse.h
src/: CMakeLists.txt  core_bluepad32.c  core_bluepad32.h  main.c  usb_hid.c
src/platform/amiga/: quad_mouse.c
